# Python-6-Web-HomeWork-11

./: README.md  pyproject.toml
config/: config.py
migrations/versions/: 2083df25cc95_add_db_ab_nb.py  547fd3d7dc59_initial_migration.py
src/: __init__.py  models.py  routes.py
src/libs/: checkers.py  normalize.py  validation_schemas.py
src/repository/: addressbook.py  notebook.py  parsing_file.py  users.py
src/static/: style.css
src/templates/: base.html
src/templates/pages/: addressbook.html  contact_add.html  contact_bitrhdays.html  contact_del.html  contact_edit.html  contact_find.html  email_del.html  emails.html  file_parser.html  index.html  login.html  note_date.html  note_del.html  note_edit.html  note_find.html  note_new.html  notebook.html  phone_del.html  phones.html  registration.html
